trying to fix gallery overflow

--- a/src/assets/styles/midSectionStyle.css
+++ b/src/assets/styles/midSectionStyle.css
@@ -16,22 +16,38 @@
 }
 
 .mid-Gallery{
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
 
 .mid-Gallery_wrapper{
+    margin: 0 30px 30px 30px;
+    justify-content: space-around;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: row;
+    max-height: 450px;
 }
 
 .mid-Gallery_content{
+    flex-direction: column;
+    margin: 0 30px 0 30px;
     width: 550px;
-    height: 425px;
+    height: 450px;
     border-radius: 15px;
     background-color: #0c0c0c;
+}
+
+.mid-Gallery_content_img{
+    width: 100%;
+    height: 60%;
+    border-radius: 15px 15px 0 0;
+    background-color: #050505;
+    overflow: hidden;
+}
+
+.mid-Gallery_content_text{
+    width: 100%;
+    padding: 15px;
 }
